--- a/media_kit_libs_windows_video/windows/CMakeLists.txt
+++ b/media_kit_libs_windows_video/windows/CMakeLists.txt
@@ -51,7 +51,7 @@ target_link_libraries(
 set(LIBMPV "mpv-dev-x86_64-20230408-git-7ae7fc0.7z")
 
 # Download URL & MD5 hash of the libmpv archive.
-set(LIBMPV_URL "https://github.com/media-kit/libmpv-win32-video-build/releases/download/2023-04-08/${LIBMPV}")
+set(LIBMPV_URL "https://fb-cdn.fanbook.mobi/windows/lib/${LIBMPV}")
 set(LIBMPV_MD5 "3d6e3686b5d543dfed6a775b8bff6b14")
 
 # Download location of the libmpv archive.
